panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__preprocessor__test_error_pp_number_not_addition.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/preprocessor/test_error_pp_number_not_addition.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_error_pp_number_not_addition.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition name~2 `int` (12 `int`))
         (return (add `int` (0x1e `int`) (name~2 `int`))))))

----- stderr -----
