panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__preprocessor__test_error_stringise_varargs_outside_varargs_macro.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/preprocessor/test_error_stringise_varargs_outside_varargs_macro.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: `__VA_ARGS__` outside of variadic macro
   ╭─[panko/tests/cases/execute/preprocessor/test_error_stringise_varargs_outside_varargs_macro.c:2:18]
   │
 2 │ #define M(a, b) #__VA_ARGS__
   │                  ─────┬─────  
   │                       ╰─────── `__VA_ARGS__` is forbidden outside of variadic macros
───╯

Error: `__VA_OPT__` outside of variadic macro
   ╭─[panko/tests/cases/execute/preprocessor/test_error_stringise_varargs_outside_varargs_macro.c:5:19]
   │
 5 │ #define M2(a, b) #__VA_OPT__(42)
   │                   ─────┬────  
   │                        ╰────── `__VA_OPT__` is forbidden outside of variadic macros
───╯
